[workspace]
members = [
    # lib
    "prover_fri_utils",
    "prover_fri_types",
    "prover_dal",
    # binaries
    "witness_generator",
    "vk_setup_data_generator_server_fri",
    "prover_fri",
    "witness_vector_generator",
    "prover_fri_gateway",
    "proof_fri_compressor",
    "prover_cli",
    "prover_version",
    "config",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-era"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = "1"
chrono = "0.4.38"
circuit_definitions = { git = "https://github.com/matter-labs/era-zkevm_test_harness.git", branch = "v1.5.0" }
circuit_sequencer_api = { package = "circuit_sequencer_api", git = "https://github.com/matter-labs/era-zkevm_test_harness.git", branch = "v1.5.0" }
clap = "4.4.6"
colored = "2.0"
const-decoder = "0.3.0"
ctrlc = "3.1"
dialoguer = "0.11"
futures = "0.3"
hex = "0.4"
itertools = "0.10.5"
indicatif = "0.16"
jemallocator = "0.5"
local-ip-address = "0.5.0"
log = "0.4.20"
md5 = "0.7.0"
once_cell = "1.18"
proptest = "1.2.0"
zksync_prover_dal = { path = "prover_dal" }
queues = "1.1.0"
rand = "0.8"
regex = "1.10.4"
reqwest = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha3 = "0.10.8"
shivini = { git = "https://github.com/matter-labs/era-shivini.git", branch = "v1.5.0" }
sqlx = { version = "0.7.3", default-features = false }
structopt = "0.3.26"
strum = { version = "0.24" }
tempfile = "3"
tokio = "1"
toml_edit = "0.14.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
vise = { git = "https://github.com/matter-labs/vise.git", version = "0.1.0", rev = "a5bb80c9ce7168663114ee30e794d6dc32159ee4" }
vk_setup_data_generator_server_fri = { path = "vk_setup_data_generator_server_fri" }
zksync_prover_config = { path = "config" }
zksync_multivm = { path = "../core/lib/multivm", version = "0.1.0" }
zksync_vlog = { path = "../core/lib/vlog" }
zk_evm = { git = "https://github.com/matter-labs/era-zk_evm.git", branch = "v1.4.1" }
zkevm_test_harness = { git = "https://github.com/matter-labs/era-zkevm_test_harness.git", branch = "v1.5.0" }
zkevm_test_harness_1_3_3 = { git = "https://github.com/matter-labs/era-zkevm_test_harness.git", branch = "v1.3.3", package = "zkevm_test_harness" }
zksync_basic_types = { path = "../core/lib/basic_types" }
zksync_config = { path = "../core/lib/config" }
zksync_dal = { path = "../core/lib/dal" }
zksync_db_connection = { path = "../core/lib/db_connection" }
zksync_env_config = { path = "../core/lib/env_config" }
zksync_object_store = { path = "../core/lib/object_store" }
zksync_prover_fri_types = { path = "prover_fri_types" }
zksync_prover_fri_utils = { path = "prover_fri_utils" }
zksync_prover_interface = { path = "../core/lib/prover_interface" }
zksync_queued_job_processor = { path = "../core/lib/queued_job_processor" }
zksync_state = { path = "../core/lib/state" }
zksync_system_constants = { path = "../core/lib/constants" }
zksync_types = { path = "../core/lib/types" }
zksync_utils = { path = "../core/lib/utils" }
zksync_eth_client = { path = "../core/lib/eth_client" }
zksync_contracts = { path = "../core/lib/contracts" }
zksync_core_leftovers = { path = "../core/lib/zksync_core_leftovers" }
zksync_protobuf_config = { path = "../core/lib/protobuf_config" }

wrapper_prover = { package = "wrapper-prover", git = "https://github.com/matter-labs/era-heavy-ops-service.git", rev = "3d33e06" }


# for `perf` profiling
[profile.perf]
inherits = "release"
debug = true
