[workspace]
members = [
    "crates/bin/*",
    "crates/lib/*",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-era"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]

[workspace.dependencies]
# Common dependencies
anyhow = "1.0"
async-trait = "0.1"
bincode = "1"
chrono = "0.4.38"
clap = "4.4.6"
colored = "2.0"
const-decoder = "0.3.0"
ctrlc = "3.1"
dialoguer = "0.11"
futures = "0.3"
hex = "0.4"
itertools = "0.10.5"
indicatif = "0.16"
jemallocator = "0.5"
local-ip-address = "0.5.0"
log = "0.4.20"
md5 = "0.7.0"
once_cell = "1.18"
proptest = "1.2.0"
queues = "1.1.0"
rand = "0.8"
regex = "1.10.4"
reqwest = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha3 = "0.10.8"
sqlx = { version = "0.8.0", default-features = false }
structopt = "0.3.26"
strum = { version = "0.26" }
tempfile = "3"
tokio = "1"
toml_edit = "0.14.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
vise = "0.2.0"

# Proving dependencies
circuit_definitions = { git = "https://github.com/matter-labs/zksync-protocol", package = "circuit_definitions", branch = "si/fflonk" }
circuit_sequencer_api = { git = "https://github.com/matter-labs/zksync-protocol", package = "circuit_sequencer_api", branch = "si/fflonk" }
zkevm_test_harness = { git = "https://github.com/matter-labs/zksync-protocol", package = "zkevm_test_harness", branch = "si/fflonk" }
fflonk = { git = "https://github.com/matter-labs/zksync-crypto", package = "fflonk", branch = "si/fflonk" }
franklin-crypto = { git = "https://github.com/matter-labs/zksync-crypto", package = "franklin-crypto", branch = "si/fflonk" }

# GPU proving dependencies
wrapper_prover = { git = "https://github.com/matter-labs/zksync-crypto-gpu", package = "zksync-wrapper-prover", branch = "daniyar/fflonk" }
shivini = { git = "https://github.com/matter-labs/zksync-crypto-gpu", package = "shivini", branch = "daniyar/fflonk" }

# Core workspace dependencies
zksync_multivm = { path = "../core/lib/multivm", version = "0.1.0" }
zksync_vlog = { path = "../core/lib/vlog" }
zksync_basic_types = { path = "../core/lib/basic_types" }
zksync_config = { path = "../core/lib/config" }
zksync_dal = { path = "../core/lib/dal" }
zksync_db_connection = { path = "../core/lib/db_connection" }
zksync_env_config = { path = "../core/lib/env_config" }
zksync_object_store = { path = "../core/lib/object_store" }
zksync_prover_interface = { path = "../core/lib/prover_interface" }
zksync_queued_job_processor = { path = "../core/lib/queued_job_processor" }
zksync_system_constants = { path = "../core/lib/constants" }
zksync_types = { path = "../core/lib/types" }
zksync_utils = { path = "../core/lib/utils" }
zksync_eth_client = { path = "../core/lib/eth_client" }
zksync_contracts = { path = "../core/lib/contracts" }
zksync_core_leftovers = { path = "../core/lib/zksync_core_leftovers" }
zksync_periodic_job = { path = "../core/lib/periodic_job" }

# Prover workspace dependencies
zksync_prover_dal = { path = "crates/lib/prover_dal" }
zksync_prover_fri_types = { path = "crates/lib/prover_fri_types" }
zksync_prover_fri_utils = { path = "crates/lib/prover_fri_utils" }
vk_setup_data_generator_server_fri = { path = "crates/bin/vk_setup_data_generator_server_fri" }

[patch.crates-io]
boojum = { git = "https://github.com/matter-labs/zksync-crypto", package = "boojum", branch = "si/fflonk" }

# for `perf` profiling
[profile.perf]
inherits = "release"
debug = true
