[workspace]
members = ["crates/bin/*", "crates/lib/*"]

resolver = "2"

[workspace.package]
version = "21.0.0" # x-release-please-version
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-era"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]

[workspace.dependencies]
# Common dependencies
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7.5"
bincode = "1"
byteorder = "1.5.0"
chrono = "0.4.38"
clap = "4.4.6"
colored = "2.0"
const-decoder = "0.3.0"
ctrlc = "3.1"
debug-map-sorted = "0.1.1"
dialoguer = "0.11"
futures = "0.3"
hex = "0.4"
humantime = "2.1"
humantime-serde = "1.1"
indicatif = "0.16"
jemallocator = "0.5"
k8s-openapi = { version = "0.24.0", features = ["v1_30"] }
kube = { version = "0.99.0", features = ["runtime", "derive"] }
log = "0.4.20"
md5 = "0.7.0"
once_cell = "1.18"
proptest = "1.2.0"
rand = "0.8"
regex = "1.10.4"
reqwest = "=0.12.9"
reqwest-middleware = "=0.3.3"
reqwest-retry = "0.7.0"
ring = "0.17.8"
rustls = { version = "0.23.12", features = ["ring"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
sha3 = "0.10.8"
sqlx = { version = "0.8.1", default-features = false }
structopt = "0.3.26"
strum = { version = "0.26" }
strum_macros = "0.26"
tempfile = "3"
thiserror = "2.0.12"
tokio = "1"
tokio-util = "0.7.11"
tokio-stream = "0.1.16"
toml_edit = "0.14.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2.5"
url = "2.5.2"
vise = "0.3.0"

#circuit_definitions = "=0.152.3"
#circuit_sequencer_api = "=0.152.3"
#zkevm_test_harness = "=0.152.3"
#
fflonk = "=0.32.1"
franklin-crypto = "=0.32.1"

# GPU proving dependencies

#proof-compression-gpu = { package = "proof-compression", version = "=0.154.3" }

#fflonk-gpu = { package = "fflonk-cuda", version = "=0.154.3" }
#wrapper_prover = { package = "zksync-wrapper-prover", version = "=0.154.3" }

#shivini = "=0.154.3"
#boojum-cuda = "=0.154.3"

# Core workspace dependencies
zksync_multivm = { path = "../core/lib/multivm" }
zksync_vlog = { path = "../core/lib/vlog" }
zksync_basic_types = { path = "../core/lib/basic_types" }
zksync_config = { path = "../core/lib/config" }
zksync_dal = { path = "../core/lib/dal" }
zksync_db_connection = { path = "../core/lib/db_connection" }
zksync_env_config = { path = "../core/lib/env_config" }
zksync_object_store = { path = "../core/lib/object_store" }
zksync_prover_interface = { path = "../core/lib/prover_interface" }
zksync_queued_job_processor = { path = "../core/lib/queued_job_processor" }
zksync_system_constants = { path = "../core/lib/constants" }
zksync_types = { path = "../core/lib/types" }
zksync_utils = { path = "../core/lib/utils" }
zksync_task_management = { path = "../core/lib/task_management" }
zksync_eth_client = { path = "../core/lib/eth_client" }
zksync_contracts = { path = "../core/lib/contracts" }
zksync_core_leftovers = { path = "../core/lib/zksync_core_leftovers" }
zksync_protobuf_config = { path = "../core/lib/protobuf_config" }

# Prover workspace dependencies
zksync_prover_dal = { version = "=21.0.0", path = "crates/lib/prover_dal" }
zksync_prover_fri_types = { version = "=21.0.0", path = "crates/lib/prover_fri_types" }
zksync_prover_fri_utils = { version = "=21.0.0", path = "crates/lib/prover_fri_utils" }
zksync_prover_task = { version = "=21.0.0", path = "crates/lib/prover_task" }
zksync_prover_keystore = { version = "=21.0.0", path = "crates/lib/keystore" }
zksync_vk_setup_data_generator_server_fri = { version = "=21.0.0", path = "crates/bin/vk_setup_data_generator_server_fri" }
zksync_prover_job_processor = { version = "=21.0.0", path = "crates/lib/prover_job_processor" }
zksync_circuit_prover_service = { version = "=21.0.0", path = "crates/lib/circuit_prover_service" }
zksync_prover_job_monitor = { version = "=21.0.0", path = "crates/bin/prover_job_monitor" }

#[patch.crates-io]
circuit_sequencer_api = { git = 'https://github.com/matter-labs/zksync-protocol.git', rev = '30c185fe4ab7a0e33c5a70d49a6bbde66b5862d1', package = 'circuit_sequencer_api' }
circuit_definitions = { git = 'https://github.com/matter-labs/zksync-protocol.git', rev = '30c185fe4ab7a0e33c5a70d49a6bbde66b5862d1', package = 'circuit_definitions' }
zkevm_test_harness = { git = 'https://github.com/matter-labs/zksync-protocol.git', rev = '30c185fe4ab7a0e33c5a70d49a6bbde66b5862d1', package = 'zkevm_test_harness' }

proof-compression-gpu = { git = 'https://github.com/matter-labs/zksync-crypto-gpu.git', rev = '960b05bad8fec715f2695836cdce14e6597dcd7f', package = 'proof-compression' }
fflonk-gpu = { git = 'https://github.com/matter-labs/zksync-crypto-gpu.git', rev = '960b05bad8fec715f2695836cdce14e6597dcd7f', package = 'fflonk-cuda' }
wrapper_prover = { git = 'https://github.com/matter-labs/zksync-crypto-gpu.git', rev = '960b05bad8fec715f2695836cdce14e6597dcd7f', package = 'zksync-wrapper-prover' }
shivini = { git = 'https://github.com/matter-labs/zksync-crypto-gpu.git', rev = '960b05bad8fec715f2695836cdce14e6597dcd7f', package = 'shivini' }
boojum-cuda = { git = 'https://github.com/matter-labs/zksync-crypto-gpu.git', rev = '960b05bad8fec715f2695836cdce14e6597dcd7f', package = 'boojum-cuda' }



# for `perf` profiling
[profile.perf]
inherits = "release"
debug = true

