[package]
name = "retrieve-blobs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = "0.12.1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
prometheus = "0.13"
hyper = { version = "0.14", features = ["full", "server"] }
lazy_static = "1.5"
