[workspace]
members = [
    "crates/common",
    "crates/config",
    "crates/types",
    "crates/zk_inception",
    "crates/zk_supervisor",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
homepage = "https://zksync.io/"
license = "MIT OR Apache-2.0"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
exclude = ["./github"]
repository = "https://github.com/matter-labs/zk_toolbox/"
description = "ZK Toolbox is a set of tools for working with zk stack."
keywords = ["zk", "cryptography", "blockchain", "ZKStack", "ZKsync"]


[workspace.dependencies]
# Local dependencies
common = { path = "crates/common" }
config = { path = "crates/config" }
types = { path = "crates/types" }

# ZkSync deps
zksync_config = { path = "../core/lib/config" }
zksync_protobuf_config = { path = "../core/lib/protobuf_config" }
zksync_basic_types = { path = "../core/lib/basic_types" }
zksync_protobuf = "=0.1.0-rc.11"
zksync_consensus_roles = "=0.1.0-rc.11"
zksync_consensus_crypto = "=0.1.0-rc.11"

# External dependencies
anyhow = "1.0.82"
clap = { version = "4.4", features = ["derive", "wrap_help", "string"] }
slugify-rs = "0.0.3"
cliclack = "0.2.5"
console = "0.15.8"
ethers = "2.0"
futures = "0.3.30"
human-panic = "2.0"
lazy_static = "1.4.0"
once_cell = "1.19.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.8.1", features = [
    "runtime-tokio",
    "migrate",
    "postgres",
] }
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0.57"
tokio = { version = "1.37", features = ["full"] }
toml = "0.8.12"
url = { version = "2.5.0", features = ["serde"] }
xshell = "0.2.6"
clap-markdown = "0.1.4"
