[package]
name = "zkos_prover"
version = "20.2.0" # x-release-please-version
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-era"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync"]
categories = ["cryptography"]


[dependencies]
air-compiler-cli = { package = "cli", git = "https://github.com/matter-labs/zksync-airbender.git", tag="v0.3.3" }
execution_utils = { package = "execution_utils", git = "https://github.com/matter-labs/zksync-airbender.git", tag="v0.3.3" }

#air-compiler-cli = { package = "cli",  path = "../../zksync-airbender/tools/cli"}
#execution_utils = { package = "execution_utils", path = "../../zksync-airbender/execution_utils" }

anyhow = "1.0.98"
base64 = "0.22.1"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "*"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
bincode = "1"
clap = "4.5.39"

[features]
gpu = ["air-compiler-cli/gpu"]
