[workspace]
members = [
    "crates/common",
    "crates/config",
    "crates/types",
    "crates/zkstack",
    "crates/git_version_macro",
]
resolver = "2"

[workspace.package]
version = "0.1.2" # x-release-please-version
edition = "2021"
homepage = "https://zksync.io/"
license = "MIT OR Apache-2.0"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
exclude = ["./github"]
repository = "https://github.com/matter-labs/zksync-era/tree/main/zkstack_cli/"
description = "ZK Stack CLI is a set of tools for working with zk stack."
keywords = ["zk", "cryptography", "blockchain", "ZKStack", "ZKsync"]

[workspace.dependencies]
# Local dependencies
zkstack_common = { version = "0.1.2", path = "crates/common" }
zkstack_config = { version = "0.1.2", path = "crates/config" }
zkstack_types = { version = "0.1.2", path = "crates/types" }
zkstack_git_version_macro = { version = "0.1.2", path = "crates/git_version_macro" }

# ZkSync deps
zksync_config = { version = "25.4.0", path = "../core/lib/config" }
zksync_protobuf_config = { version = "25.4.0", path = "../core/lib/protobuf_config" }
zksync_basic_types = { version = "25.4.0", path = "../core/lib/basic_types" }
zksync_consensus_roles = "=0.7.0"
zksync_consensus_crypto = "=0.7.0"
zksync_consensus_utils = "=0.7.0"
zksync_protobuf = "=0.7.0"
zksync_protobuf_build = "=0.7.0"

# External dependencies
anyhow = "1.0.82"
clap = { version = "4.4", features = ["derive", "wrap_help", "string"] }
clap_complete = "4.5.33"
dirs = "5.0.1"
slugify-rs = "0.0.3"
cliclack = "0.2.5"
console = "0.15.8"
chrono = "0.4.38"
ethers = "2.0"
futures = "0.3.30"
human-panic = "2.0"
lazy_static = "1.4.0"
once_cell = "1.19.0"
prost = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.8.1", features = [
    "runtime-tokio",
    "migrate",
    "postgres",
] }
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0.57"
tokio = { version = "1.37", features = ["full"] }
toml = "0.8.12"
url = { version = "2.5.0", features = ["serde"] }
xshell = "0.2.6"
clap-markdown = "0.1.4"
secrecy = "0.8.0"
