[package]
name = "zksync_os_linked_prover"
version = "0.1.0"
edition = "2024"

[dependencies]
zksync_airbender_cli = { package = "cli", git = "https://github.com/matter-labs/zksync-airbender.git", tag = "v0.3.1", features = ["gpu"] }
zksync_airbender_execution_utils = { package = "execution_utils", git = "https://github.com/matter-labs/zksync-airbender.git", tag = "v0.3.1" }


anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
proof_cache = { path = "../proof_cache" }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }